--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
             <div class="row">
                 {{#each burger_data}}
                     {{#unless this.devoured}}
-                    <div class="col-md-9 text-center">
+                    <div class="col-md-9 text-center burger">
                         <pre>{{this.id}}. {{this.burger_name}}</pre>
                     </div>
                     <div class="col-md-3 text-center">
@@ -24,7 +24,7 @@
                 {{/each}}
             </div>
         </div>
-        <div class="col-md-6 text-center">
+        <div class="col-md-6 text-center burger">
             {{#each burger_data}}
                 {{#if this.devoured}}
                     <pre>{{this.id}}. {{this.burger_name}}</pre>
@@ -33,7 +33,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-12 text-center">
+        <div class="col-md-12 text-center new_burger">
             <form action="/burgers/create" method="POST">
                 <input type="text" class="form-control" name="burger_name" value="" id="burger_text">
                 <button type="submit" class="btn btn-primary" id="burger_button">Submit</button>
