--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="/assets/css/reset.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 </head>
 <body>
     {{{body}}}
